[package]
name = "sort_of_blink"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unsafe_blink_row_sort"
path = "src/bin/unsafe_blink_row_sort.rs"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
rtt-target = "0.5.0"
microbit-v2 = "0.15.0"
nrf52833-hal = "0.18.0"
embedded-hal = "1.0.0"
